<resources>
    <string name="app_name">Табель</string>
    <string name="text_menu">Справка</string>
    <string name="text_exit">Выход</string>
    <string name="title_activity_calculator_zpp">Калькулятор ЗП</string>
    <string name="text_salary">Оклад</string>
    <string name="text_work_clok">Отработанные часы</string>
    <string name="text_year_norm">Годовая норма</string>
    <string name="text_prem">Введите премию</string>
    <string name="text_kty">Введите КТУ</string>
    <string name="text_rezald">Результат вычесления:</string>
    <string name="text_btn_calc_zp">Считать</string>
    <string name="text_btn_calc_zp1">Отмена</string>
    <string name="title_activity_chat">Чат</string>
    <string name="title_activity_tabel">Добавление записи в табель</string>
    <string name="text_btn_save">Сохранить</string>
    <string name="text_date">Устоновите дату</string>
    <string name="text_date_report_s">Устоновите дату c</string>
    <string name="text_date_report_p">Устоновите дату по</string>
    <string name="text_clok">Устоновите время</string>
    <string name="text_text">Описание работы</string>
    <string name="text_btn_save_cancellation"> Отмена </string>
    <string name="title_activity_calculator_zp">Расчет ЗП</string>

    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="title_activity_report">Отчет</string>
    <string name="title_activity_reference">Справка</string>

    <string name="text_ref">
       Справка:
        При первом запуске приложения пользователю в первую очередь необходимо будет авторизоваться,
        иначе функционал приложения будет ограничен.
        Деле пользователь если у него есть пользовательский аккаунт в Google может выбрать из предложенного списка аккаунтов,
        если у пользователя нет действующего аккаунта то ему нужно нажать на всплывшем меню «Другое» и ввести там любой другой
        адрес электронной почты.
        Поле чего пользователь нажимает кнопку сохранить, система производить регистрацию пользователя в
        системе и он может полноценно пользоваться приложением.
        Чтобы добавить запись в табель пользователь должен нажать на кнопку в правом нижнем углу экрана.
        После нажатия кнопки правом нижнем углу экрана пользователь попадает на новый экран приложения где он может добавить запись в табель.
        Чтобы добавить запись пользователь должен нажать сохранить, чтобы ничего не сохранять и вернуться обратно нужно нажать отмена.
        После того как пользователь внес запись в список выполненных работ о может при длительном нажатии на элемент списка вызвать контекстное меню.
        В котором он может отредактировать сделанную им запись или просто ее удалить.
        Для получения отчета о проделанной работе пользователю необходимо прейти на вкладку «Отчет» в  меню на главном экране приложения.
        Для получения отчета пользователю необходимо установить с какой по какую дату будет формироваться отчет и нажать кнопку применить
        и отчет выведется на экран. Данные которые
        Для получения расчета заработной платы пользователю необходимо прейти на вкладку «Расчет ЗП» в  меню на главном экране приложения.
        Расчет заработной платы производится в ознакомительной форме так как в бухгалтерии очень много аспектов расчета зарплаты, такие как переработка,
        премии, годовая норма которая рассчитывается экономистами каждый год. Точный расчет заработной платы уточняйте в бухгалтерии.

    </string>

</resources>
